# ddd-llm-claims

./: .gitignore  .project_organization  APPLICATION_STATUS.md  BEST_PRACTICES.md  CONTRIBUTING.md  DATA_TEMPLATES.md  DISCLAIMERS.md  LICENSE  LOCAL_SETUP.md  PREFACE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TEMPLATES_QUICK_REFERENCE.md  TESTING_GUIDE.md  check_services.sh  config.yaml  data_templates.py  demo.py  pyproject.toml  requirements.txt  run_dashboard.sh  run_demo.sh  run_streamlit.sh  start_services.sh  streamlit_app.py
docs/: COMPLIANCE_USAGE.md  CORRECTNESS.md  DEMO_GUIDE.md  DEMO_WORKFLOW_GUIDE.md  DOA_CHECKLIST.md  ENHANCED_REVIEW_INTERFACE.md  FRAUD_DETECTION_DEMO.md  OLLAMA_SINGLE_GPU_SETUP.md  README.md  REFERENCES.md  RESEARCH_SUMMARY.md  RESILIENCE.md  TECHNICAL.md  UI_DECISION_VIEWING.md  architecture.md  sequence_diagram.md  visualization.html  visualization_guide.md
examples/: expected_output.json  human_review_example.py  run_example.py  sample_claim_email.txt  sample_policy.json
pages/: claims_list.py  process_claim.py  review_queue.py  review_queue_enhanced.py
scripts/: check_ollama_setup.py  demo_fraud_detection.py  generate_fraud_templates.py  generate_test_documents.py  random_template_generator.py  run_fraud_tests.py  run_tests.py  setup.py  setup_ollama.sh  verify_startup.py  visualize.py
src/: __init__.py
tests/: __init__.py  expected_fraud_results.json  test_compliance.py  test_document_validation.py  test_domain_models.py  test_e2e.py  test_e2e_simple.py  test_fraud_detection.py  test_human_review.py  test_run.py  (+2 more)
(+93 files in other folders)
